# mem

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-release.yaml
memov/: main.py
memov/core/: git.py  manager.py  trace.py
memov/utils/: string_utils.py
